@@ -1,3 +1,9 @@
+2004-11-09  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b268
+
+	* Fix: Only try to send email after saving album data, when email is activated.
+	       This prevents an errormessage when creating album with debugmode on.
+	  TODO: better way of debug output.
+
 2004-11-09  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b267
 
 	* Change: Refine the search regex to be faster and more accurate
